threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/thread_suspend/test000006.overshift.err
Error: overshift error
File: threadx/threadx/common/src/tx_thread_system_suspend.c
Line: 270
assembly.ll line: 1685
State: 10
Stack: 
	#000042119 in klee_overshift_check(bitWidth=64, shift=symbolic) at runtime/Intrinsic/klee_overshift_check.c:27
	#100001685 in _tx_thread_system_suspend(thread_ptr=94431829527168) at threadx/threadx/common/src/tx_thread_system_suspend.c:270
	#200023826 in _tx_thread_suspend(thread_ptr=symbolic) at threadx/threadx/common/src/tx_thread_suspend.c:159
	#300023746 in _txe_thread_suspend(thread_ptr=symbolic) at threadx/threadx/common/src/txe_thread_suspend.c:99
	#400017070 in _txm_module_manager_tx_thread_suspend_dispatch(module_instance=symbolic, param_0=symbolic) at threadx/threadx/common_modules/module_manager/inc/txm_module_manager_dispatch.h:2544
	#500007139 in _txm_module_manager_kernel_dispatch(kernel_request=69, param_0=symbolic, param_1=0, param_2=0) at threadx/threadx/common_modules/module_manager/src/txm_module_manager_kernel_dispatch.c:663
	#600000215 in m_txe_thread_suspend(thread_ptr=symbolic) at threadx/threadx/common_modules/module_lib/src/txm_thread_suspend.c:75
	#700000198 in main() at evaluation_files/thread_suspend.c:13
