threadx_test/evaluation/build/evaluation_files/home/klee/klee_test/threadx_test/evaluation/evaluation_files/thread_suspend/test000006.kquery
array _tx_thread_current_ptr[8] : w32 -> w8 = symbolic
array lazy_alloc1[432] : w32 -> w8 = symbolic
array lazy_alloc3[432] : w32 -> w8 = symbolic
array lazy_alloc5[2312] : w32 -> w8 = symbolic
array thread_ptr[8] : w32 -> w8 = symbolic
(query [(Eq 94431829527616
             (ReadLSB w64 0 _tx_thread_current_ptr))
         (Eq 94431829379584
             (ReadLSB w64 264 lazy_alloc3))
         (Eq 0
             (And w64 (ReadLSB w64 24 lazy_alloc5)
                      2))
         (Eq 94431829527168
             (ReadLSB w64 0 thread_ptr))
         (Eq 1414025796
             (ReadLSB w64 0 lazy_alloc1))
         (Eq 0
             (ReadLSB w32 92 lazy_alloc1))
         (Eq 94431829527168
             (ReadLSB w64 64 lazy_alloc1))
         (Ule 64
              (ZExt w64 (ReadLSB w32 88 lazy_alloc1)))]
        false)
